--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -25,10 +25,11 @@
       <div class="nav-container"></div>
       <div class="main-container">
         <div class="row colors">
-          <div class="col-md-3"></div>
-          <div class="col-md-3"></div>
-          <div class="col-md-3"></div>
-          <div class="col-md-3"></div>
+          <div class="col-md-2"></div>
+          <div class="col-md-2"></div>
+          <div class="col-md-2"></div>
+          <div class="col-md-2"></div>
+		  <div class="col-md-2"></div>
         </div>
         <section class="hero-slider">
           <ul class="slides">
@@ -47,7 +48,7 @@
               <div class="container">
                 <div class="row">
                   <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 text-center">
-                    <img alt="logo" class="logo" src="2016/img/gophercon-2016-logo.png">
+                    <img alt="logo" class="logo" src="2016/img/gopher-logo.svg">
 									  <span class="uppercase text-white">July 11th to 13th - Denver, Colorado</span>
                     <h1 class="large-h1 text-white">Largest event in the world dedicated to the Go programming language.</h1>
                   </div>
