--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -48,7 +48,7 @@
               <div class="container">
                 <div class="row">
                   <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 text-center">
-                    <img alt="logo" class="logo" src="2016/img/gopher-logo.svg">
+                    <img alt="logo" class="logo" src="2016/img/gopher-logo.png">
 									  <span class="uppercase text-white">July 11th to 13th - Denver, Colorado</span>
                     <h1 class="large-h1 text-white">Largest event in the world dedicated to the Go programming language.</h1>
                   </div>
