--- a/themes/gophercon/static/2016/css/theme-gophercon.css
+++ b/themes/gophercon/static/2016/css/theme-gophercon.css
@@ -578,23 +578,25 @@ nav .container {
 .has-dropdown a {
   padding-left: 18px;
 }
-.has-dropdown:before {
-  display: inline-block;
-  font-family: 'Pe-icon-7-stroke';
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  content: "\e688";
-  color: #fff;
-  font-size: 24px;
-  position: absolute;
-  top: -6px;
+/*
+.has-dropdown:before  {
+display: inline-block;
+font-family: 'Pe-icon-7-stroke';
+speak: none;
+font-style: normal;
+font-weight: normal;
+font-variant: normal;
+text-transform: none;
+line-height: 1;
+-webkit-font-smoothing: antialiased;
+-moz-osx-font-smoothing: grayscale;
+content: "\e688";
+color: #fff;
+font-size: 24px;
+position: absolute;
+top: -6px;
 }
+*/
 .menu .social-link {
   font-size: 14px;
   top: 0px !important;
@@ -1191,6 +1193,12 @@ nav .container {
   color: #fff;
   pointer-events: auto;
 }
+.color-blocks block-content::afternth-child(1) h1{
+	color: #EED797;
+}
+color-blocks block-content::afternth-child(2) h1{
+	color: #FFB98D;
+}
 .color-blocks a:hover i {
   transform: rotateZ(-10deg);
 }
@@ -1199,22 +1207,22 @@ nav .container {
   color: #004470;
   font-size: 70px;
   display: inline-block;
-  border: 2px solid #fff;
+  border: 2px solid rgba(0, 0, 0, 0.5);
   border-radius: 50%;
   width: 120px;
   height: 120px;
   line-height: 117px;
-  background: #fff;
+  background: rgba(75,75,75,1);
   text-align: center;
   transition: all 0.1s ease-out;
   -webkit-transition: all 0.1s ease-out;
   -moz-transition: all 0.1s ease-out;
 }
 .block-left {
-  background-color: #eed797 ;
+	background-color: #555555;
 }
 .block-right {
-  background-color: #ffb98d ;
+ 	background-color: #555555;
   right: 0px;
 }
 @media all and (max-width: 768px) {
@@ -1251,6 +1259,7 @@ nav .container {
 .speaker {
   position: relative;
   overflow: hidden;
+  padding: 20px;
 }
 .speaker,
 .topic {
@@ -1268,9 +1277,14 @@ nav .container {
   transition: all 0.3s ease-out;
   -webkit-transition: all 0.3s ease-out;
   -moz-transition: all 0.3s ease-out;
+   border-radius: 200px;
 }
 .speaker .image-holder {
   margin-bottom: 12px;
+  border-radius: 200px;
+}
+.speaker img {
+  border-radius: 200px;
 }
 .speaker span {
   display: block;
@@ -1310,20 +1324,100 @@ nav .container {
   margin-bottom: 36px;
 }
 .speaker-with-bio .speaker {
-  width: 50%;
+  width: 40%;
   float: left;
-  margin-bottom: 0px;
+  margin-bottom: 0;
+  padding: 0;
 }
 .speaker-with-bio .speaker-description {
-  width: 50%;
+  width: 60%;
   float: left;
-  padding-left: 30px;
+  padding-left: 15px;
+}
+.speaker-with-bio .speaker-description h2{
+	font-size: 25px;
+	
+}
+.speaker-with-bio .speaker-description a{
+	display: block;
+	margin-bottom: 18px;
+	
 }
 .speaker-description span {
   display: inline-block;
-  margin-bottom: 18px;
   font-weight: 600;
 }
+
+
+/* landing Page Speakers --------------------------------------------------*/
+
+#landing-page .speakers {
+	background: #CDC2B8;
+	padding: 100px 0;
+}
+#landing-page .speakers .row div h1{
+	margin: 15px;
+	background: #FFB98D;
+	padding: 30px;
+	color: #CC5306;
+	box-shadow: 1px 5px 10px 1px rgba(206, 88, 13, 0.73);
+	text-align: center;
+}
+#landing-page .speakers .speakers-row{
+	padding: 0 25px;
+}
+#landing-page .speakers .speakers-row .speaker {
+	padding: 30px;
+	background: #fff;
+	text-align: center;
+	margin: 5px;
+	box-shadow: 1px 5px 10px 1px rgb(153, 121, 89);
+}
+/* END landing Page Speakers --------------------------------------------------*/
+
+/* Interior Page Speakers --------------------------------------------------*/
+
+#interior-speakers-page .hero-slider .slides .video-header {
+	height: 380px;
+}
+#interior-speakers-page .hero-slider .slides .video-header .logo{
+	max-width: 175px;
+}
+#interior-speakers-page .hero-slider .slides .video-header .uppercase{
+	margin-bottom: 15px;
+}
+#interior-speakers-page .hero-slider .slides .video-header  h1{
+	margin-bottom: 15px;
+	font-size: 29px;
+	line-height: 35px;
+}
+#interior-speakers-page .hero-slider .slides .video-header  .background-image-holder{
+	top: -20%;
+}
+#interior-speakers-page .keynote-speakers, #interior-speakers-page .regular-speakers {
+	margin-bottom: 100px;
+}
+#interior-speakers-page .keynote-speakers h1{
+	background: #FFB98D;
+	padding: 20px;
+	color: #CC5306;
+	box-shadow: 1px 5px 10px 1px rgba(206, 88, 13, 0.73);
+	text-align: center;
+}
+#interior-speakers-page .regular-speakers h1{
+	background: #9BD9D9;
+	padding: 20px;
+	color: #089F9F;
+	box-shadow: 1px 5px 10px 1px rgb(8, 171, 171);
+	text-align: center;
+}
+
+
+
+/* END Interior Page Speakers --------------------------------------------------*/
+
+
+
 @media all and (max-width: 767px) {
   .speaker-with-bio .speaker {
     width: 100%;
@@ -1995,7 +2089,6 @@ p.question {
   transition: all 0.3s ease-out;
   -webkit-transition: all 0.3s ease-out;
   -moz-transition: all 0.3s ease-out;
-  max-height: 80px;
 }
 .sponsors span {
   display: inline-block;
@@ -2005,6 +2098,113 @@ p.question {
   color: #004470;
   border-color: #004470;
 }
+
+
+
+/* Interior Page Sponsors --------------------------------------------------*/
+
+#interior-sponsors-page .hero-slider .slides .video-header {
+	height: 380px;
+}
+#interior-sponsors-page .hero-slider .slides .video-header .logo{
+	max-width: 175px;
+}
+#interior-sponsors-page .hero-slider .slides .video-header .uppercase{
+	margin-bottom: 15px;
+}
+#interior-sponsors-page .hero-slider .slides .video-header  h1{
+	margin-bottom: 15px;
+	font-size: 29px;
+	line-height: 35px;
+}
+#interior-sponsors-page .hero-slider .slides .video-header  .background-image-holder{
+	top: -20%;
+}
+
+#interior-sponsors-page .sponsors h1{
+	text-align: center;
+}
+
+#interior-sponsors-page .sponsor{
+	height: auto;
+}
+
+#interior-sponsors-page .diamond-sponsors,  
+#interior-sponsors-page .platinum-sponsors, 
+#interior-sponsors-page .gold-sponsors,
+#interior-sponsors-page .silver-sponsors,
+#interior-sponsors-page .bronze-sponsors,
+#interior-sponsors-page .additional-sponsors {
+	margin-bottom: 100px;
+}
+
+#interior-sponsors-page .diamond-sponsors h1 {
+	background: #3498db;
+  padding: 20px;
+  color: #0562A2;
+  box-shadow: 1px 5px 10px 1px rgb(0, 104, 174);
+}
+#interior-sponsors-page .diamond-sponsors .sponsor img {
+	max-width: 100%;
+}
+#interior-sponsors-page .platinum-sponsors h1 {
+	background: #ecf0f1;
+	padding: 20px;
+	color: #8EB8C3;
+	box-shadow: 1px 5px 10px 1px rgb(168, 198, 205);
+}
+#interior-sponsors-page .platinum-sponsors .sponsor img {
+	max-width: 75%;
+
+}
+#interior-sponsors-page .gold-sponsors h1 {
+	background: #f1c40f;
+	padding: 20px;
+	color: #B08D00;
+	box-shadow: 1px 5px 10px 1px rgba(219, 176, 0, 0.95);
+}
+#interior-sponsors-page .gold-sponsors .sponsor img {
+	max-width: 100%;
+
+}
+#interior-sponsors-page .silver-sponsors h1 {
+	background: #bdc3c7;
+	padding: 20px;
+	color: #8997A2;
+	box-shadow: 1px 5px 10px 1px rgb(153, 162, 168);
+}
+#interior-sponsors-page .silver-sponsors .sponsor img {
+	max-width: 100%;
+
+}
+
+#interior-sponsors-page .bronze-sponsors h1 {
+	background: #978064;
+	padding: 20px;
+	color: #6C491D;
+	box-shadow: 1px 5px 10px 1px rgb(110, 77, 37);
+}
+#interior-sponsors-page .bronze-sponsors .sponsor img {
+	max-width: 50%;
+
+}
+
+#interior-sponsors-page .additional-sponsors h1 {
+	background: #93dede;
+	padding: 20px;
+	color: #51ACAC;
+	box-shadow: 1px 5px 10px 1px rgb(101, 180, 180);
+}
+#interior-sponsors-page .additional-sponsors .sponsor img {
+	max-width: 70%;
+
+}
+
+
+
+/* END Interior Page Sponsors --------------------------------------------------*/
+
+
 @media all and (min-width: 321px) and (max-width: 767px) and (orientation: landscape) {
   .sponsors .col-sm-6 {
     width: 50%;
@@ -2325,10 +2525,10 @@ footer.classic .social-profiles {
 body .colors {
 	margin: 0;
 }
-body .colors div {
+body .colors  {
 	height: 10px;
 }
-body .colors .col-md-2 {
+body .colors span {
 	-webkit-animation-duration: 0.5s;
 	-moz-animation-duration: 0.5s;
 	-ms-animation-duration: 0.5s;
@@ -2337,8 +2537,11 @@ body .colors .col-md-2 {
 	padding: 0;
 	margin: 0;
 	width: 20%;
+	height: 10px;
+	float: left;
+	display: block;
 }
-body .colors .col-md-2:nth-child(1n+0) {
+body .colors span:nth-child(1n+0) {
     background: #9bd9d9;
   	-webkit-animation-delay: 0.1s;
 	-moz-animation-delay: 0.1s;
@@ -2346,7 +2549,7 @@ body .colors .col-md-2:nth-child(1n+0) {
 	-o-animation-delay: 0.1s;
 	animation-delay: 0.1s;
 }
-body .colors .col-md-2:nth-child(2n+0) {
+body .colors span:nth-child(2n+0) {
     background: #ffb98d;
 	-webkit-animation-delay: 0.2s;
 	-moz-animation-delay: 0.2s;
@@ -2354,7 +2557,7 @@ body .colors .col-md-2:nth-child(2n+0) {
 	-o-animation-delay: 0.2s;
 	animation-delay: 0.2s;
 }
-body .colors .col-md-2:nth-child(3n+0) {
+body .colors span:nth-child(3n+0) {
     background: #b7a998;
 	-webkit-animation-delay: 0.3s;
 	-moz-animation-delay: 0.3s;
@@ -2362,7 +2565,7 @@ body .colors .col-md-2:nth-child(3n+0) {
 	-o-animation-delay: 0.3s;
 	animation-delay: 0.3s;
 }
-body .colors .col-md-2:nth-child(4n+0) {
+body .colors span:nth-child(4n+0) {
     background: #eed797;
 	-webkit-animation-delay: 0.4s;
 	-moz-animation-delay: 0.4s;
@@ -2370,7 +2573,7 @@ body .colors .col-md-2:nth-child(4n+0) {
 	-o-animation-delay: 0.4s;
 	animation-delay: 0.4s;
 }
-body .colors .col-md-2:nth-child(5n+0) {
+body .colors span:nth-child(5n+0) {
     background: #bbd2db;
 	-webkit-animation-delay: 0.4s;
 	-moz-animation-delay: 0.4s;
@@ -2408,7 +2611,7 @@ body .colors .col-md-2:nth-child(5n+0) {
   padding: 6px 12px; 
   font-size: 16px; 
   position: relative; 
-  bottom: -38px; 
+  bottom: -62px; 
   margin-top: -42px;
   width: 160px;
   float: right;
@@ -2472,7 +2675,7 @@ body .colors .col-md-2:nth-child(5n+0) {
 		width: 50%;
 	}
 	.block-right {
-		background-color: #ffb98d;
+		background-color: #555555;
 		right: 0;
 		top: 0 !important;
 	}
@@ -2538,7 +2741,7 @@ body .colors .col-md-2:nth-child(5n+0) {
 		width: 100%;
 	}
 	.block-right {
-		background-color: #ffb98d;
+		background-color: #555555;
 		bottom: 0 !important;
 		right: 0;
 		top: auto !important;
@@ -2604,7 +2807,7 @@ body .colors .col-md-2:nth-child(5n+0) {
 		width: 100%;
 	}
 	.block-right {
-		background-color: #ffb98d;
+		background-color: #555555;
 		bottom: 0 !important;
 		right: 0;
 		top: auto !important;
