--- a/themes/gophercon/layouts/partials/footer.html
+++ b/themes/gophercon/layouts/partials/footer.html
@@ -1,40 +1,42 @@
-<footer>
-    <div class="container">
-      <div class="row">
-          <div class="col-md-2 col-md-offset-1 text-center">
-            <img src="/images/cowboy-color.png" width="170" />
+      <div class="footer-container">			
+        <footer class="short footer">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-7">
+                <span class="text-white">© Copyright 2016 GopherAcademy, LLC.<br>
+                </span>
+                <p class="small character-copyright">The Gopher character is based on the Go mascot designed by
+                  <a href="http://reneefrench.blogspot.com/" target="blank">Renée French</a>
+                  and copyrighted under the
+                  <a href="http://creativecommons.org/licenses/by/3.0/us/" target="blank">Creative Commons Attribution 3.0 license.</a>
+                </p>
+              </div>
+              <div class="col-sm-5 text-right">
+                <ul class="menu">
+                	<li><a href="https://gopheracademy.com/about/">About</a></li>
+                	<li><a href="mailto:gophercon@gopheracademy.com">Contact</a></li>
+		  			<li><a class="inner-link back-to-top" href="#top">Back To Top&nbsp;<i class="icon pe-7s-angle-up-circle"></i></a></li>
+               </ul>
+              </div>
+            </div>
           </div>
-          <div class="col-md-7 col-md-offset-1">
-            <p><b>GopherCon</b> is organized by GopherAcademy, LLC, a community-driven group of developers focused on the education of developers and the promotion of the Go programming language.</p>
-
-            <p class="copyright">© 2015 GopherAcademy, LLC</p>
-            <p class="copyright-character">The Gopher character is based on the Go mascot designed by
-              <a href="http://reneefrench.blogspot.com/" target="blank">Renée French</a>
-              and copyrighted under the
-              <a href="http://creativecommons.org/licenses/by/3.0/us/" target="blank">Creative Commons Attribution 3.0 license.</a>
-            </p>
-	    <p>Powered by <a href="http://gohugo.io">Hugo</a>.</p>
-	    <p>Hosting provided by <a href="http://digitalocean.com"><img src="/img/dohost.png" /></a>.</p>
-          </div>
+        </footer>
       </div>
-    </div>
-</footer>
+				
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" ></script>
+      <script src="2016/js/bootstrap.min.js"></script>
+      <script src="2016/js/skrollr.min.js"></script>
+      <script src="2016/js/lightbox.min.js"></script>
+      <script src="2016/js/smooth-scroll.min.js"></script>
+      <script src="2016/js/scripts.js"></script>
+      <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-
-<script src="/bootstrap/js/bootstrap.min.js"></script>
-<script src="/js/main.js"></script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-40886074-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
-
-</body>
+        ga('create', 'UA-40886074-1', 'auto');
+        ga('send', 'pageview');
+      </script>
+    </body>
 </html>
