fix color bars on small layouts

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -26,12 +26,12 @@
       <div class="nav-container"></div>
       <div class="main-container">
         <div class="row colors">
-          <div class="col-md-2"></div>
-          <div class="col-md-2"></div>
-          <div class="col-md-2"></div>
-          <div class="col-md-2"></div>
-          <div class="col-md-2"></div>
-          <div class="col-md-2"></div>
+          <div class="col-xs-2"></div>
+          <div class="col-xs-2"></div>
+          <div class="col-xs-2"></div>
+          <div class="col-xs-2"></div>
+          <div class="col-xs-2"></div>
+          <div class="col-xs-2"></div>
         </div>
         <section class="hero-slider">
           <ul class="slides">
