mobile layout tweaks, ported from feature/Responsive branch

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -99,7 +99,7 @@
         <section class="contained-gallery">
           <div class="container">
             <div class="row">
-              <div class="col-md-5 col-sm-6">
+              <div class="col-md-5">
                 <h1>Why attend GopherCon?</h1>
                 
                 <p class="lead">
@@ -110,9 +110,9 @@
                 <a href="/Gophercon2016Prospectus.pdf" class="btn btn-hollow"><i class="icons8-handshake-filled"></i> Sponsor 2016</a>
               </div>
               
-              <div class="col-md-6 col-sm-6 col-md-offset-1">
+              <div class="col-md-6 col-md-offset-1">
                 <div class="embedded-video-holder vju">
-                  <iframe width="600" height="370" src="https://www.youtube.com/embed/616jvCSR0cg?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+                  <iframe width="100%" height="370" src="https://www.youtube.com/embed/616jvCSR0cg?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
                 </div>
               </div>
             </div>
