--- a/themes/gophercon/static/2016/css/theme-gophercon.css
+++ b/themes/gophercon/static/2016/css/theme-gophercon.css
@@ -1985,16 +1985,13 @@ p.question {
   background: #f5f5f5;
 }
 .sponsor {
-  margin-bottom: 36px;
-  height: 80px;
-  line-height: 80px;
+  margin-bottom: 28px;
 }
 .sponsor img {
-  max-width: 150px;
   transition: all 0.3s ease-out;
   -webkit-transition: all 0.3s ease-out;
   -moz-transition: all 0.3s ease-out;
-  max-height: 80px;
+  vertical-align: middle;
 }
 .sponsors span {
   display: inline-block;
@@ -2004,6 +2001,47 @@ p.question {
   color: #004470;
   border-color: #004470;
 }
+
+.platinum-sponsors .sponsor {
+  height: 80px;
+  line-height: 80px;
+}
+
+.platinum-sponsors .sponsor img {
+  max-width: 170px;
+  max-height: 80px;
+}
+
+.gold-sponsors .sponsor {
+  height: 70px;
+  line-height: 70px;
+}
+
+.gold-sponsors .sponsor img {
+  max-width: 150px;
+  max-height: 70px;
+}
+
+.silver-sponsors .sponsor {
+  height: 60px;
+  line-height: 60px;
+}
+
+.silver-sponsors .sponsor img {
+  max-width: 100px;
+  max-height: 60px;
+}
+
+.bronze-sponsors .sponsor {
+  height: 50px;
+  line-height: 50px;
+}
+
+.bronze-sponsors .sponsor img {
+  max-width: 80px;
+  max-height: 50px;
+}
+
 @media all and (min-width: 321px) and (max-width: 767px) and (orientation: landscape) {
   .sponsors .col-sm-6 {
     width: 50%;
@@ -2263,7 +2301,7 @@ footer.short {
 }
 footer.short .character-copyright {
   font-size: 12px;
-  line-height: 12px;
+  line-height: 1.3;
   margin: 0px;
   padding: 0px;
 }
