replace early bird and speaker sections as CFP is now over, and there are no more early bird tickets available

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -69,28 +69,28 @@
               <a href="https://ti.to/gophercon/gophercon-2016" class="block-content">
                 <div class="col-md-2 col-sm-4 text-center">
                   <i>
-                    <img class="icon" src="2016/img/icons/Hummingbird-70.png" width="60" style="margin-left: -5px; margin-top: -10px">
+                    <img class="icon" src="2016/img/icons/Starred Ticket-70.png" width="60" style="margin-top: -15px">
                   </i>
                 </div>
               
                 <div class="col-md-4 col-sm-8">
-                  <h1>Purchase an early bird ticket and save!</h1>
+                  <h1>Need Tickets?</h1>
                   <p>
-                    Catch our Early Bird special and save 25% off your ticket, be quick before they sell out!
+                    Get your tickets early and guarantee your entrance to the largest Go conference in the world.
                   </p>
                 </div>
               </a>
               
-              <a href="http://cfp.gophercon.com/" class="block-content">
+              <a href="/Gophercon2016Prospectus.pdf" class="block-content">
                 <div class="col-md-2 col-sm-4 text-center">
                   <i>
-                    <img class="icon" src="2016/img/icons/Advertising-70.png" width="50" style="margin-top: -18px">
+                    <img class="icon" src="2016/img/icons/Handshake-70.png" width="50" style="margin-top: -12px">
                   </i>
                 </div>
               
                 <div class="col-md-4 col-sm-8">
-                  <h1>Give a talk and your ticket, flight, and stay are free!</h1>
-                  <p>We are currently accepting talk proposals for conference sessions. Please see our CFP for details.</p>
+                  <h1>Interested in Sponsoring?</h1>
+                  <p>Ensure that 2016 is the best to date and become a sponsor.</p>
                 </div>
               </a>
             </div>
@@ -107,7 +107,6 @@
                 </p>
                 
                 <a href="https://ti.to/gophercon/gophercon-2016" class="btn"><i class="icons8-ticket"></i> Buy Tickets</a>
-                <a href="/Gophercon2016Prospectus.pdf" class="btn btn-hollow"><i class="icons8-handshake-filled"></i> Sponsor 2016</a>
               </div>
               
               <div class="col-md-6 col-md-offset-1">
