initial speaker layout

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -117,6 +117,48 @@
             </div>
           </div>
         </section>
+
+        <section class="speakers">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-12">
+                <h1>Speakers</h1>
+              </div>
+            </div>
+            
+            <div class="row">
+              <div class="speaker-with-bio">
+                <div class="speaker col-md-2">
+                  <div class="image-holder">
+                    <img class="background-image" alt="Speaker" src="2016/img/speakers/raphael-simon.jpg">
+                    <div class="hover-state text-center preserve3d">
+                      <div class="social-links vertical-align">
+                        <a href="#"><i class="icon social_twitter"></i></a>
+                        <a href="#"><i class="icon social_linkedin"></i></a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+    
+                <div class="speaker-description col-md-9 col-md-offset-1">
+                  <h2>Francesc Campoy Flores</h2>
+                  <span class="sub">goa: a new approach to microservice development in Go</span>
+                  <p>This tutorial introduces a novel approach to building microservices in Go that uses code to describe the design of the service API.</p>
+                  <p>The design is then fed to generation tools that produce not only actual service modules but also other outputs such as client Go packages, command line tools, Javascript and documentation via Swagger specifications and JSON schemas.</p>
+
+                  <p>In this tutorial we will use goa to build a microservice from scratch complete with UI, client tool and documentation.</p>
+                  <p>We’ll also take a look at how to leverage the goa request context at runtime to implement the API endpoint.</p>
+                  <div class="speaker-bio">
+                    <p>Raphael Simon is a Systems Architect at RightScale where he’s been designing many of the systems that make up the platform for the past 8 years.</p>
+                    <p>Prior to that role Simon worked as a lead engineer at Eiffel Software on the Eiffel language compiler and libraries and as a principal engineer at Citrix on the GoTo line of products.</p>
+                    <p>Simon received his MS in Computer Science and Applied Mathematics at ENSEEIHT, France.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
         <section class="lightbox-gallery gallery-header">
           <div>
             <ul>
