--- a/themes/gophercon/static/2016/css/theme-gophercon.css
+++ b/themes/gophercon/static/2016/css/theme-gophercon.css
@@ -1308,21 +1308,25 @@ nav .container {
   overflow: hidden;
   margin-bottom: 36px;
 }
-.speaker-with-bio .speaker {
-  width: 50%;
-  float: left;
-  margin-bottom: 0px;
-}
-.speaker-with-bio .speaker-description {
-  width: 50%;
-  float: left;
-  padding-left: 30px;
-}
+
 .speaker-description span {
   display: inline-block;
   margin-bottom: 18px;
   font-weight: 600;
 }
+.speaker-bio {
+  border-top: 2px solid #eee;
+  font-size: 12px;
+  margin-top: 20px;
+  padding-top: 20px;
+}
+
+.speaker-bio p {
+  color: #888;
+  font-size: 12px;
+  line-height: 1.3;
+}
+
 @media all and (max-width: 767px) {
   .speaker-with-bio .speaker {
     width: 100%;
@@ -2678,4 +2682,7 @@ body .colors .col-xs-2:nth-child(6n+0) {
 		float: none;
 		width: 100%;
 	}
+}
+.speakers {
+  background-color: #f5f5f5;
 }
