round speaker images

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -128,7 +128,7 @@
             
             <div class="row">
               <div class="speaker-with-bio">
-                <div class="speaker col-md-2">
+                <div class="speaker col-md-3">
                   <div class="image-holder">
                     <img class="background-image" alt="Speaker" src="2016/img/speakers/raphael-simon.jpg">
                     <div class="hover-state text-center preserve3d">
@@ -140,7 +140,7 @@
                   </div>
                 </div>
     
-                <div class="speaker-description col-md-9 col-md-offset-1">
+                <div class="speaker-description col-md-9">
                   <h2>Francesc Campoy Flores</h2>
                   <span class="sub">goa: a new approach to microservice development in Go</span>
                   <p>This tutorial introduces a novel approach to building microservices in Go that uses code to describe the design of the service API.</p>
