correct speaker name

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -141,7 +141,7 @@
                 </div>
     
                 <div class="speaker-description col-md-9">
-                  <h2>Francesc Campoy Flores</h2>
+                  <h2>Raphael Simon</h2>
                   <span class="sub">goa: a new approach to microservice development in Go</span>
                   <p>This tutorial introduces a novel approach to building microservices in Go that uses code to describe the design of the service API.</p>
                   <p>The design is then fed to generation tools that produce not only actual service modules but also other outputs such as client Go packages, command line tools, Javascript and documentation via Swagger specifications and JSON schemas.</p>
