add photo for john leon

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -306,7 +306,7 @@ instagram.com/reneefrench</p>
               <div class="speaker-with-bio">
                 <div class="speaker col-md-3">
                   <div class="image-holder">
-                    <img class="background-image" alt="Speaker" src="2016/img/speakers/placeholder.jpg">
+                    <img class="background-image" alt="Speaker" src="2016/img/speakers/john-leon.png">
                     <div class="hover-state text-center preserve3d">
                     </div>
                   </div>
