new bio for Daniel Whitenack

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -723,9 +723,11 @@ Then write a lot of code.</p>
                   <p>In this session, I will discuss several major go-based efforts in the field of data science and use cases for Go over python/R in a data processing context.</p>
                   <p>I will also discuss go-based data science workflows and tools, including Go notebooks, to help your get your feet wet.</p>
                   <div class="speaker-bio">
-                    <p>Daniel is a Ph.D. trained data scientist and engineer who loves to utilize Go and who is super interested to helping Go become a go to language for data science and data engineering.</p>
-                    <p>As a data scientist with Telnyx, a next gen telephony company, he develops Go services that automate pricing, customer/vendor management, track company metrics, and populate visualizations.</p>
-                    <p>In addition to this, he consults on other data science/engineering related projects and develops things like <q>gophernotes</q>.</p>
+		    <p>Daniel is a Ph.D. trained data scientist who is interested in helping Go become a "go to" language for data science/engineering.</p>
+		    <p>As a data consultant, Daniel helps his clients develop and deploy data-driven services using technologies such as Go and Docker.</p>
+		    <p>These services include predictive analytics services, real-time dashboards, pricing optimizations, and more.</p>
+		    <p>He enjoys contributing to the open source community, with projects like gophernotes, and mentoring data science students at Thinkful.</p>
+		    <p>On twitter <a href="https://twitter.com/dwhitena">@dwhitena</a>.</p>
                   </div>
                 </div>
               </div>
